--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>vs code demo</title>
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/150x50">
+        <img id="img1" src="https://via.placeholder.com/150x50">
         <nav>
             <ul>
                 <li><a>Link 1</a></li>
@@ -19,11 +20,15 @@
     </header>
     <main>
         <section>
-            <img src="https://via.placeholder.com/960x450">
-            <img src="https://via.placeholder.com/450">
-            <p></p>
+            <img id="img2" src="https://via.placeholder.com/960x450">
+            <img id="img3" src="https://via.placeholder.com/450">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id efficitur est, in feugiat purus. Sed vitae quam augue. In tempus molestie viverra. In et fermentum ante. Mauris pulvinar rhoncus nisi at interdum. Aenean molestie mauris quis nibh egestas consequat. Aliquam congue ex auctor urna egestas sollicitudin. Nunc interdum dignissim pellentesque. Vestibulum vehicula, arcu sed egestas egestas, sapien quam imperdiet lacus, eu efficitur ipsum quam ac nisi. Pellentesque bibendum justo ultricies urna tincidunt dignissim. Duis nec felis felis.
+
+                Donec id sodales lorem. Cras commodo tempor erat at suscipit. Etiam nisi velit, commodo in ex et, vehicula blandit nisi. In hac habitasse platea dictumst. Morbi iaculis quam faucibus ultrices sagittis. Nullam lacus magna, mattis ut metus sit amet, sodales pretium erat. Sed bibendum risus ex, id vehicula velit efficitur vel. Aenean sapien velit, malesuada vel eleifend eget, tempus eu magna. Sed cursus risus ex, euismod lacinia felis dignissim eu. Sed feugiat sodales enim, ut vestibulum odio pharetra at. Donec nulla mi, dapibus a tellus eget, pulvinar cursus nisi. Sed id eros nec erat congue pellentesque ac sit amet quam. Quisque vitae ultricies dolor, in lacinia sem.
+                
+                </p>
         </section>
     </main>
-    <footer>&copy; Cain Jose 2022</footer>
+    <footer><span>&copy; Cain Jose 2022</span></footer>
 </body>
 </html>
